# Iterative-Data-Framework

./: App.cpp  App.h  CMakeLists.txt  Data.cpp  Data.h  README.md  main.cpp
examples/: FractalEngine.cpp  FractalEngine.h
examples/logistic-map/: LogisticMapEngine.cpp  LogisticMapEngine.h  LogisticMapEngine.hpp
examples/sierpinski-triangle/: FractalEngine.cpp  FractalEngine.h  FractalEngine.hpp
include/: CommunicationChannel.hpp  ConsoleHandler.hpp  IterativeDataDisplay.h  IterativeDataDisplay.hpp  IterativeDataEngine.h  IterativeDataEngine.hpp
src/: CommunicationChannel.cpp  ConsoleHandler.cpp  IterativeDataDisplay.cpp
